[package]
name = "luna-vdb"
version = "0.0.1"
authors = ["dingyi <dingyi222666@foxmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
tsify = { version = "0.4.5", features = ["js"] }
kiddo = { version = "5.0.3", features = ["serde"] }
serde = "1.0.217"
serde_json = "1.0.134"
serde-wasm-bindgen = "0.6.5"
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack]
skip-pkg-json = true
