[package]
name = "luna-vdb"
version = "0.0.1"
authors = ["dingyi <dingyi222666@foxmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
tsify = { version = "0.4.5", features = ["js"] }
kiddo = { version = "5.0.3", features = ["serde"] }
serde = "1.0.217"
serde-wasm-bindgen = "0.6.5"
wee_alloc = { version = "0.4.5", optional = true }
flate2 = "1.0.35"
bincode = "1.3.3"

[dev-dependencies]
getrandom = { version = "0.3.0", features = ["js"] }
wasm-bindgen-test = "0.3.34"
web-sys = { version = "0.3.67", features = ["console"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[profile.dev]
debug = true
debug-assertions = true
opt-level = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack]
skip-pkg-json = true

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true
